--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <img src="./Starter.png" alt="">
+            <img src="./Images/Starter.png" alt="">
             <nav class="navigation">
                 <ul>
                     <li>
@@ -36,7 +36,7 @@
             <h2>Recent <span>Projects</span></h2>
             <div class="cards">
                 <div class="card1">
-                    <img src="./3D-illustrations-gabriel-pinheiro.com.png" alt="">
+                    <img src="./Images/3D-illustrations-gabriel-pinheiro.com.png" alt="">
                     <div class="texts">
                         <h3>Project1</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -46,7 +46,7 @@
                     
                 </div>
                 <div class="card2">
-                    <img src="./3d.png" alt="">
+                    <img src="./Images/3d.png" alt="">
                     <div class="texts">
                         <h3>Project2</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -56,7 +56,7 @@
                     
                 </div>
                 <div class="card3">
-                    <img src="./Awesome feature.png" alt="">
+                    <img src="./Images/Awesome feature.png" alt="">
                     <div class="texts"><h3>Project3</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                              Suspendisse bibendum. Nunc non posuere consectetur, justo erat s
@@ -73,19 +73,19 @@
         <h2>Latest <span>Posts</span> </h2>
         <div class="posts">
             <div class="post1">
-                <img src="./Notifications_Outline 1.png" alt="">
+                <img src="./Images/Notifications_Outline 1.png" alt="">
                 <h5>Lorem ipsum dolor </h5>
                 <p>April 24, 2022 - 5 min read</p>
                 <p><span>Nunc non posuere consectetur, justo erat semper enim, non hendrerit dui odio id enim.</span></p>
             </div>
             <div class="post2">
-                <img src="./Data processing _Outline 1.png" alt="">
+                <img src="./Images/Data processing _Outline 1.png" alt="">
                 <h5>Lorem ipsum dolor </h5>
                 <p>April 03, 2022 - 4 min read</p>
                 <p><span>Nunc non posuere consectetur, justo erat semper enim, non hendrerit dui odio id enim.</span></p>
             </div>
             <div class="post3">
-                <img src="./Startup_Outline-2 1.png" alt="">
+                <img src="./Images/Startup_Outline-2 1.png" alt="">
                 <h5>Lorem ipsum dolor </h5>
                 <p>March 12, 2022 - 6 min read</p>>
                 <p><span>Nunc non posuere consectetur, justo erat semper enim, non hendrerit dui odio id enim.</span></p>
@@ -99,9 +99,9 @@
         <div class="footer">
             <p>© Copyright 2022  All rights reserved</p>
             <div class="social-media">
-                <a href=""><img src="./Frame F.png" alt=""></a>
-                <a href=""><img src="./Frame T.png" alt=""></a>
-                <a href=""><img src="./Frame L.png" alt=""></a>
+                <a href=""><img src="./Images/Frame F.png" alt=""></a>
+                <a href=""><img src="./Images/Frame T.png" alt=""></a>
+                <a href=""><img src="./Images/Frame L.png" alt=""></a>
             </div>
         </div>
     </footer>
